# GenDiff

./: .Makefile.swn  .Makefile.swo  .Makefile.swp  .gitignore  Makefile  README.md  parser.py  pyproject.toml
.github/workflows/: .pyci.yml.swo  .pyci.yml.swp  pyci.yml
gendiff/: .data_parsing.py.swp  .diff.py.swp  .file_comparison.py.swp  :wsda:w  __init__.py  data_parsing.py  diff.py  file_comparison.py  generate_diff.py  read_file.py  stylish.py
gendiff/formats/: correct_view.py  json.py  plain.py  stylish.py
gendiff/generators/: .file_comparison.py.swp  .flat_of_comparison.py.swp  file_comparison.py
gendiff/scripts/: .gendiff.py.swo  .gendiff.py.swp  gendiff.py
hexlet_course/hexlet-django-blog/: pyproject.toml
hexlet_course/hexlet-django-blog/hexlet_django_blog/: settings.py
test/: test_gendiff.py
tests/: .test_recursion_comparison.py.swp  test_gendiff.py  test_gendiff_yml.py  test_recursion_comparison.py
tests/fixtures/: check_json.json
tests/fixtures/recursive_data_yml/: sample_output_recursion.yaml
